--- a/searchablespinner/build.gradle
+++ b/searchablespinner/build.gradle
@@ -6,9 +6,10 @@ buildscript {
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
 }
 group='com.github.chetan532'
-version = '1.0.0'
+version = '1.0.1'
 
 android {
     namespace 'com.cvaghela.spinner.searchablespinner'
@@ -17,7 +18,7 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 1
+        versionCode 2
         versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -37,13 +38,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.core:core-ktx:+'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
