--- a/searchablespinner/src/main/AndroidManifest.xml
+++ b/searchablespinner/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cvaghela.spinner.searchablespinner">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.SearchableSpinner" />
+        android:supportsRtl="true" />
 
 </manifest>
